added images and updated versions

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,5 +7,6 @@
         <item>A\u0026A 1942 Spring</item>
         <item>A\u0026A Anniversary Edition</item>
         <item>A\u0026A 1940 Pacific/Europe</item>
+        <item>A\u0026A 1914</item>
     </string-array>
 </resources>
