added images and updated versions

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,5 +8,6 @@
         <item>A\u0026A Anniversary Edition</item>
         <item>A\u0026A 1940 Pacific/Europe</item>
         <item>A\u0026A 1914</item>
+        <item>A\u0026A Europe</item>
     </string-array>
 </resources>
