cleaned up code a bit and added all the rest of the versions

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,5 +10,7 @@
         <item>1914</item>
         <item>Europe</item>
         <item>Pacific</item>
+        <item>Classic Second Edition</item>
+        <item>Revised</item>
     </string-array>
 </resources>
