--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,13 @@
         <item name="android:background">@drawable/button_green</item>
     </style>
 
-
 </resources>
 
+    <!--<style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">-->
+    <!-- Used for the buttons -->
+    <!--<item name="colorAccent">@color/colorPrimary</item>-->
+    <!-- Used for the title and text -->
+    <!--<item name="android:textColorPrimary">@color/colorPrimaryDark</item>-->
+    <!-- Used for the background -->
+    <!--<item name="android:background">#FFFFFF</item>-->
+    <!--</style>-->
